Update rust-network-mgr to version 0.1.7, add Docker monitoring capabilities, enhance configuration loading with user directory fallback, and improve error handling. Refactor network and nftables management for better integration with Docker events. Update README to reflect new features and usage instructions. Adjust tests for updated state management and event handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-network-mgr"
 authors = ["sparesparrow"]
-version = "0.1.6"
+version = "0.1.7"
 edition = "2024"
 description = "Linux based network management, packet routing and LAN peers IP monitoring service"
 license-file = "LICENSE"
@@ -35,9 +35,6 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_yaml = "^0.9.25"       # For parsing YAML configuration files
 serde_json = "^1.0"        # ADDED: For debug printing in nftables.rs
 
-# Remove explicit features again, rely on dep:nftnl in [features] table
-# nftnl = { version = "^0.7.0"} # REMOVED: No longer using direct nftnl bindings
-
 # Error handling and logging
 thiserror = "^1.0.48"
 tracing = "^0.1.37"
@@ -49,7 +46,12 @@ anyhow = "^1.0" # General purpose error handling, useful alongside thiserror
 futures = "^0.3" # For stream handling with rtnetlink
 futures-util = "0.3"
 tempfile = "3.10.1" # Updated tempfile version
-rustables = "0.8.6"
+
+# Docker Interaction
+bollard = "0.15"
+
+# ADD nftables-rs crate
+nftables = "0.6" # Using the JSON API crate
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -60,3 +62,4 @@ rustables = "0.8.6"
 log = "0.4"
 
 env_logger = "0.10" # Or latest compatible version
+rustable = "0.3.0"
